--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,29 @@
 @charset "UTF-8";
 
 /* container */
-#container .section__group{
+#container .section__group {
     display: flex;
     justify-content: space-between;
     margin-bottom: 186px;
 }
-.section__group .section__top{
+
+.section__group .section__top {
     border-bottom: 4px solid #000;
 }
 
-.section__top .btn-more{
+.section__top .btn-more {
     font-size: 1.15rem;
     display: flex;
     align-items: center;
 }
-.section__top .btn-more img{
+
+.section__top .btn-more img {
     padding-left: 8px;
 }
 
 
 /* what's on */
-#container .section__whats-on{
+#container .section__whats-on {
     width: 800px;
 }
 
@@ -29,17 +31,18 @@
     flex-grow: 1;
     padding: 0 16px 0 60px;
 }
+
 .section__whats-on .section__top .section__top-box:nth-child(3) {
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
     padding-left: 32px;
     border-left: 1px solid #ddd;
     line-height: 1.4;
 }
 
-.section__whats-on .lst-tab__item .lst-tab__item-link{
+.section__whats-on .lst-tab__item .lst-tab__item-link {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -54,33 +57,41 @@
     font-size: 0.7rem;
     color: #999;
 }
-.section__whats-on .lst-tab__item.today .lst-tab__item-link{
+
+.section__whats-on .lst-tab__item.today .lst-tab__item-link {
     border: 1px solid #000;
 }
-.section__whats-on .lst-tab__item .lst-tab__item-link .whats-on__calendar-week.week-holiday{
+
+.section__whats-on .lst-tab__item .lst-tab__item-link .whats-on__calendar-week.week-holiday {
     color: #f36464;
 }
-.section__whats-on .lst-tab__item .lst-tab__item-link .whats-on__calendar-date{
+
+.section__whats-on .lst-tab__item .lst-tab__item-link .whats-on__calendar-date {
     font-weight: bold;
     font-size: 1.2rem;
     color: #000;
     padding-top: 9px;
 }
-.section__whats-on .lst-tab__item.day-off .lst-tab__item-link .whats-on__calendar-date{
+
+.section__whats-on .lst-tab__item.day-off .lst-tab__item-link .whats-on__calendar-date {
     color: #ccc;
 }
-.section__whats-on .lst-tab__item:hover .lst-tab__item-link{
+
+.section__whats-on .lst-tab__item:hover .lst-tab__item-link {
     background: #000;
 }
-.section__whats-on .lst-tab__item:hover .lst-tab__item-link .whats-on__calendar-date{
+
+.section__whats-on .lst-tab__item:hover .lst-tab__item-link .whats-on__calendar-date {
     color: #fff;
 }
-.section__whats-on .section__top-box .btn-more{
+
+.section__whats-on .section__top-box .btn-more {
     font-size: 1rem;
     flex-direction: column;
     font-weight: 500;
 }
-.section__whats-on .section__top-box .btn-more img{
+
+.section__whats-on .section__top-box .btn-more img {
     padding-bottom: 4px;
     padding-left: 0;
 }
@@ -93,16 +104,17 @@
     overflow-y: auto;
 }
 
-.section__whats-on .section__cnt::-webkit-scrollbar { 
-    display: none; 
+.section__whats-on .section__cnt::-webkit-scrollbar {
+    display: none;
 }
 
-.section__whats-on .section__cnt .section__cnt-wrap{
+.section__cnt .section__cnt-wrap {
     position: relative;
     display: flex;
     flex-direction: column;
 }
-.section__whats-on .section__cnt .section__cnt-wrap:before{
+
+.section__cnt .section__cnt-wrap:before {
     content: "";
     position: absolute;
     left: 2px;
@@ -111,18 +123,24 @@
     width: 1px;
     background-color: #ccc;
 }
-.section__whats-on .section__cnt .section__activity{
+
+.section__cnt .section__activity {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 60px;
-    /* font-family: 'Noto Sans KR'; */
+    margin-bottom: 60px;
 }
-.section__whats-on .section__cnt .section__activity .section__activity-info{
+
+.section__cnt .section__activity:last-child {
+    margin-bottom: 0;
+}
+
+.section__cnt .section__activity .section__activity-info {
     position: relative;
     padding-left: 46px;
 }
-.section__whats-on .section__cnt .section__activity .section__activity-info:before{
-    content:"";
+
+.section__cnt .section__activity .section__activity-info:before {
+    content: "";
     position: absolute;
     top: 4px;
     left: 0;
@@ -131,24 +149,24 @@
     border-radius: 50%;
     background-color: #000;
 }
-.section__whats-on .section__cnt .section__activity .section__activity-info .section__activity-title{
+
+.section__cnt .section__activity .section__activity-info .section__activity-title {
     display: block;
-    font-size: 2.5rem;
-    line-height: 1.4;
-    padding: 24px 0;
 }
-.section__whats-on .section__cnt .section__activity .section__activity-info .section__activity-desc{
+
+.section__cnt .section__activity .section__activity-info .section__activity-desc {
     color: #999;
-    padding-bottom: 32px;
 }
-.section__whats-on .section__cnt .section__activity .section__activity-info .section__activity-space .section__activity-reservation{
+
+.section__cnt .section__activity .section__activity-info .section__activity-space .section__activity-reservation {
     position: relative;
     display: inline-block;
     color: #62BA47;
-    padding-left: 26px;    
+    padding-left: 26px;
 }
-.section__whats-on .section__cnt .section__activity .section__activity-info .section__activity-space .section__activity-reservation:before{
-    content:"";
+
+.section__cnt .section__activity .section__activity-info .section__activity-space .section__activity-reservation:before {
+    content: "";
     position: absolute;
     left: 13px;
     top: 2px;
@@ -157,56 +175,83 @@
     background: #ccc;
 }
 
-.section__whats-on .section__cnt .section__activity .section__activity-img{
+.section__cnt .section__activity .section__activity-img {
     position: relative;
 }
-.section__whats-on .section__cnt .section__activity .section__activity-img .section__activity-location{
+
+.section__cnt .section__activity .section__activity-img img {
+    height: 100%;
+    width: auto;
+}
+
+.section__cnt .section__activity .section__activity-img .section__activity-location {
     position: absolute;
     top: 0;
     right: 0;
-    width: 64px;
-    height: 32px;
     color: #fff;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.4);
     font-size: 0.9rem;
     text-align: center;
+}
+
+.section__whats-on .section__cnt .section__activity .section__activity-info .section__activity-title {
+    font-size: 2.5rem;
+    line-height: 1.4;
+    padding: 24px 0;
+}
+
+.section__whats-on .section__cnt .section__activity .section__activity-info .section__activity-desc {
+    padding-bottom: 32px;
+}
+
+.section__whats-on .section__cnt .section__activity .section__activity-img .section__activity-location {
+    width: 64px;
+    height: 32px;
     line-height: 32px;
 }
 
 /* space ・ culture */
-#container .section__space-culture{
+#container .section__space-culture {
     width: 285px;
 }
+
 #container .section__space-culture .section__top {
     padding-bottom: 36px;
 }
-#container .section__space-culture .section__title{
+
+#container .section__space-culture .section__title {
     font-size: 1.8rem;
 }
-#container .section__space-culture .section__cnt{
+
+#container .section__space-culture .section__cnt {
     margin-top: 30px;
 }
-.section__space-culture .section__cnt .section__cnt-box + .section__cnt-box {
+
+.section__space-culture .section__cnt .section__cnt-box+.section__cnt-box {
     margin-top: 42px;
 }
-.section__space-culture .section__cnt .section__cnt-title{
+
+.section__space-culture .section__cnt .section__cnt-title {
     font-weight: bold;
     font-size: 1.5rem;
 }
+
 .section__space-culture .section__cnt ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 12px;
 }
-.section__space-culture .section__cnt ul li{
+
+.section__space-culture .section__cnt ul li {
     background: #F8F8F8;
     width: 140px;
     height: 140px;
-    margin-bottom: 5px;  
+    margin-bottom: 5px;
     transition: all .3s;
 }
-.section__space-culture .section__cnt ul li a{
+
+.section__space-culture .section__cnt ul li a {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -214,49 +259,59 @@
     width: 100%;
     height: 100%;
 }
-.section__space-culture .section__cnt ul li a img{
+
+.section__space-culture .section__cnt ul li a img {
     width: 110px;
     height: auto;
 }
-.section__space-culture .section__cnt ul li a .img__logo-white{
+
+.section__space-culture .section__cnt ul li a .img__logo-white {
     display: none;
 }
+
 .section__space-culture .section__cnt ul li:hover {
     background: #222;
     transform: translate(-2px, -2px);
-    box-shadow: 0 30px 60px -60px rgba(50,50,93,.25), 0 18px 36px -18px rgba(0,0,0,.3), 0 -12px 36px -8px rgba(0,0,0,.025);
+    box-shadow: 0 30px 60px -60px rgba(50, 50, 93, .25), 0 18px 36px -18px rgba(0, 0, 0, .3), 0 -12px 36px -8px rgba(0, 0, 0, .025);
 }
-.section__space-culture .section__cnt ul li:hover a .img__logo-dark{
+
+.section__space-culture .section__cnt ul li:hover a .img__logo-dark {
     display: none;
 }
-.section__space-culture .section__cnt ul li:hover a .img__logo-white{
+
+.section__space-culture .section__cnt ul li:hover a .img__logo-white {
     display: block;
 }
 
 
 /* post */
-.section__post .section__cnt{
+.section__post .section__cnt {
     display: flex;
 }
-.section__post .section__cnt .section__cnt-box{
+
+.section__post .section__cnt .section__cnt-box {
     display: inline-block;
-    width: calc((100% - 90px) / 4); 
+    width: calc((100% - 90px) / 4);
 }
-.section__post .section__cnt .section__cnt-box + .section__cnt-box{
+
+.section__post .section__cnt .section__cnt-box+.section__cnt-box {
     margin-left: 30px;
 }
-.section__post .section__cnt .section__cnt-box img{
+
+.section__post .section__cnt .section__cnt-box img {
     width: 100%;
     height: auto;
 }
-.section__post .section__cnt .section__cnt-box .section__post-category{
+
+.section__post .section__cnt .section__cnt-box .section__post-category {
     position: relative;
     display: inline-block;
     font-weight: bold;
     padding: 24px 0 6px;
     font-size: 0.9rem;
 }
-.section__post .section__cnt .section__cnt-box .section__post-category:after{
+
+.section__post .section__cnt .section__cnt-box .section__post-category:after {
     content: "";
     position: absolute;
     bottom: 0;
@@ -265,24 +320,28 @@
     height: 2px;
     background-color: #000;
 }
+
 .section__post .section__cnt .section__cnt-box .section__post-title {
     display: block;
     font-size: 1.2rem;
     padding: 28px 0 12px;
 }
-.section__post .section__cnt .section__cnt-box .section__post-desc{
+
+.section__post .section__cnt .section__cnt-box .section__post-desc {
     color: #999;
 }
 
 /* Event */
-#container .section__event{
+#container .section__event {
     margin: 148px 0 128px;
 }
-.section__event .section__cnt{
+
+.section__event .section__cnt {
     display: flex;
     justify-content: space-between;
 }
-.section__event .section__cnt .section__cnt-box{
+
+.section__event .section__cnt .section__cnt-box {
     position: relative;
     display: block;
     width: 44vw;
@@ -293,29 +352,34 @@
     padding: 30px;
     box-sizing: border-box;
 }
-.section__event .section__cnt .section__cnt-box:after{
+
+.section__event .section__cnt .section__cnt-box:after {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.2);
+    background-color: rgba(0, 0, 0, 0.2);
 }
-.section__event .section__cnt .section__cnt-box:nth-child(1){
+
+.section__event .section__cnt .section__cnt-box:nth-child(1) {
     background-image: url("../images/main/event1.jpg")
 }
-.section__event .section__cnt .section__cnt-box:nth-child(2){
+
+.section__event .section__cnt .section__cnt-box:nth-child(2) {
     background-image: url("../images/main/event2.png")
 }
-.section__event .section__cnt .section__cnt-box .section__event-desc{
+
+.section__event .section__cnt .section__cnt-box .section__event-desc {
     position: absolute;
     bottom: 30px;
     left: 30px;
-    color: rgba(255,255,255,0.7);
+    color: rgba(255, 255, 255, 0.7);
     z-index: 1;
 }
-.section__event .section__cnt .section__cnt-box .section__event-desc .section__event-title{
+
+.section__event .section__cnt .section__cnt-box .section__event-desc .section__event-title {
     display: block;
     font-size: 1.3rem;
     padding-bottom: 18px;
@@ -324,37 +388,44 @@
 
 
 /* Notice */
-#container .section__notice{
+#container .section__notice {
     display: flex;
     justify-content: space-between;
 }
-#container .section__notice .section__top{
+
+#container .section__notice .section__top {
     display: block;
 }
-.section__notice .section__top .btn-more{
+
+.section__notice .section__top .btn-more {
     margin-top: 12px;
 }
-.section__notice .section__cnt{
+
+.section__notice .section__cnt {
     display: flex;
 }
-.section__notice .section__cnt .section__cnt-box{
+
+.section__notice .section__cnt .section__cnt-box {
     width: 315px;
 }
-.section__notice .section__cnt .section__cnt-box + .section__cnt-box{
+
+.section__notice .section__cnt .section__cnt-box+.section__cnt-box {
     margin-left: 100px;
 }
-.section__notice .section__cnt .section__cnt-box .section__notice-title{
+
+.section__notice .section__cnt .section__cnt-box .section__notice-title {
     display: block;
     font-size: 1.3rem;
     line-height: 1.4;
     height: 80px;
     border-bottom: 2px solid #000;
 }
-.section__notice .section__cnt .section__cnt-box .section__notice-desc{
+
+.section__notice .section__cnt .section__cnt-box .section__notice-desc {
     font-size: 1.1rem;
     line-height: 1.6;
     letter-spacing: .8px;
-    color: rgba(0,0,0,0.7);
+    color: rgba(0, 0, 0, 0.7);
     margin: 20px 0 24px;
     height: 86px;
     overflow: hidden;
@@ -364,12 +435,13 @@
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
 }
-.section__notice .section__cnt .section__cnt-box .section__notice-date{
+
+.section__notice .section__cnt .section__cnt-box .section__notice-date {
     color: #999;
 }
 
 /* download */
-#container .section__download{
+#container .section__download {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -378,16 +450,19 @@
     background-color: #EDEDED;
     margin-top: 120px;
 }
+
 .section__download .section__download-title {
     font-weight: bold;
     font-size: 1.8rem;
     margin: 24px 0
 }
-.section__download .section__download-market{
+
+.section__download .section__download-market {
     display: flex;
     align-items: center;
 }
-.section__download .section__download-market a{
+
+.section__download .section__download-market a {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -397,7 +472,8 @@
     background: #fff;
     /* font-family: 'Noto Sans KR'; */
 }
-.section__download .section__download-market .section__download-icon{
+
+.section__download .section__download-market .section__download-icon {
     display: block;
     width: 24px;
     height: 24px;
@@ -406,45 +482,52 @@
     background-size: 48px;
     margin-right: 4px;
 }
-.section__download .section__download-market .section__download-ios{
+
+.section__download .section__download-market .section__download-ios {
     margin-right: 24px;
 }
-.section__download .section__download-market .section__download-ios .section__download-icon{
+
+.section__download .section__download-market .section__download-ios .section__download-icon {
     background-position: -26px -31px;
 }
 
 
 
-@media (max-width: 1290px ){
+@media (max-width: 1290px) {
     .section__whats-on .section__cnt {
         height: 688px;
     }
 
-    #container .section__space-culture{
+    #container .section__space-culture {
         width: 200px;
     }
-    #container .section__space-culture .section__top{
+
+    #container .section__space-culture .section__top {
         padding-top: 10px;
     }
-    #container .section__space-culture .section__title{
+
+    #container .section__space-culture .section__title {
         font-size: 1.6rem;
     }
-    .section__space-culture .section__cnt .section__cnt-title{
+
+    .section__space-culture .section__cnt .section__cnt-title {
         font-size: 1.3rem;
     }
-    .section__space-culture .section__cnt ul li{
+
+    .section__space-culture .section__cnt ul li {
         width: 98px;
         height: 98px;
     }
-    .section__space-culture .section__cnt ul li a img{
+
+    .section__space-culture .section__cnt ul li a img {
         width: 90px;
     }
 
-    .section__event .section__cnt .section__cnt-box{
+    .section__event .section__cnt .section__cnt-box {
         width: 46vw;
     }
 
-    .section__notice .section__cnt .section__cnt-box + .section__cnt-box{
+    .section__notice .section__cnt .section__cnt-box+.section__cnt-box {
         margin-left: 5vw;
     }
 }
