what's on - calendar (jqueryUI)

--- a/css/culture.css
+++ b/css/culture.css
@@ -1,110 +1,203 @@
 @charset "UTF-8";
 
 #container.whats-on .section__top {
-    align-items: flex-end;
-    border-bottom: 1px solid #999;
+  align-items: flex-end;
+  border-bottom: 1px solid #999;
 }
 
 #container.whats-on .section__title {
-    font-size: 2.8rem;
-    padding-bottom: 10px;
-    font-weight: 700;
+  font-size: 2.8rem;
+  padding-bottom: 10px;
+  font-weight: 700;
 }
 
-.whats-on .section__top .lst-tab .lst-tab__item+.lst-tab__item {
-    padding-left: 38px;
+.whats-on .section__top .lst-tab .lst-tab__item + .lst-tab__item {
+  padding-left: 38px;
 }
 
 .whats-on .section__top .lst-tab .lst-tab__item .lst-tab__item-link {
-    display: flex;
-    align-items: center;
-    color: #999;
+  display: flex;
+  align-items: center;
+  color: #999;
 }
 
 .whats-on .section__top .lst-tab .lst-tab__item i {
-    font-size: 1.6rem;
-    padding-right: 10px;
+  font-size: 1.6rem;
+  padding-right: 10px;
 }
 
 .whats-on .section__top .lst-tab .lst-tab__item i.fas {
-    display: none;
+  display: none;
 }
 
 .whats-on .section__top .lst-tab .lst-tab__item.on .lst-tab__item-link {
-    font-weight: 700;
-    color: #000;
+  font-weight: 700;
+  color: #000;
 }
 
 .whats-on .section__top .lst-tab .lst-tab__item.on i.fas {
-    display: inline-block;
+  display: inline-block;
 }
 
 .whats-on .section__top .lst-tab .lst-tab__item.on i.far {
-    display: none;
+  display: none;
 }
 
 .whats-on .section__cnt {
-    margin-top: 52px;
+  margin-top: 52px;
 }
 
 .whats-on .section__cnt .lst-tab__cnt {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .whats-on .section__cnt .lst-tab__cnt .section__monthly-lst {
-    flex: 2 1 0;
+  flex: 2 1 0;
 }
 
 .whats-on .section__cnt .lst-tab__cnt .section__monthly-calendar {
-    flex: 1 1 0;
-    margin-left: 64px;
+  flex: 1 1 0;
+  margin-left: 64px;
 }
 
 .whats-on .section__cnt .lst-tab__cnt article {
-    margin-bottom: 84px;
+  margin-bottom: 84px;
 }
 
 .whats-on .section__cnt .lst-tab__cnt .section__sub-title {
-    font-size: 2rem;
-    margin-bottom: 36px;
+  font-size: 2rem;
+  margin-bottom: 36px;
 }
 
 .whats-on .section__cnt .lst-tab__cnt .monthly-lst__now .no-program {
-    display: none
+  display: none;
 }
 
 .whats-on .section__cnt .lst-tab__cnt .monthly-lst__now.none .no-program {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 320px;
-    color: #999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 320px;
+  color: #999;
 }
 
-.whats-on .section__cnt .lst-tab__cnt .monthly-lst__now.none .section__cnt-wrap::before {
-    height: 0;
+.whats-on
+  .section__cnt
+  .lst-tab__cnt
+  .monthly-lst__now.none
+  .section__cnt-wrap::before {
+  height: 0;
 }
 
-.whats-on .section__cnt .lst-tab__cnt .monthly-lst__now.none .section__activity {
-    display: none;
+.whats-on
+  .section__cnt
+  .lst-tab__cnt
+  .monthly-lst__now.none
+  .section__activity {
+  display: none;
 }
 
-.whats-on .section__cnt .section__activity .section__activity-info .section__activity-title {
-    font-size: 1.4rem;
-    padding: 12px 0;
+.whats-on
+  .section__cnt
+  .section__activity
+  .section__activity-info
+  .section__activity-title {
+  font-size: 1.4rem;
+  padding: 12px 0;
 }
 
-.whats-on .section__cnt .section__activity .section__activity-info .section__activity-desc {
-    padding-bottom: 18px;
+.whats-on
+  .section__cnt
+  .section__activity
+  .section__activity-info
+  .section__activity-desc {
+  padding-bottom: 18px;
 }
 
 .whats-on .section__cnt .section__activity .section__activity-img {
-    height: 210px;
+  height: 210px;
 }
 
-.whats-on .section__cnt .section__activity .section__activity-img .section__activity-location {
-    width: 64px;
-    height: 32px;
-    line-height: 32px;
+.whats-on
+  .section__cnt
+  .section__activity
+  .section__activity-img
+  .section__activity-location {
+  width: 64px;
+  height: 32px;
+  line-height: 32px;
+}
+
+#programCalendar .ui-datepicker-header {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-bottom: 36px;
+  position: relative;
+}
+
+#programCalendar .ui-datepicker-header .ui-corner-all {
+  width: 45px;
+  height: 45px;
+  background: no-repeat center;
+  cursor: pointer;
+}
+
+#programCalendar .ui-datepicker-header .ui-corner-all .ui-icon {
+  display: none;
+}
+
+#programCalendar .ui-datepicker-header .ui-datepicker-prev {
+  background-image: url("../images/common/ico-calendar-prev.png");
+}
+
+#programCalendar .ui-datepicker-header .ui-datepicker-next {
+  background-image: url("../images/common/ico-calendar-next.png");
+}
+
+#programCalendar .ui-datepicker-header .ui-datepicker-title {
+  position: absolute;
+  left: 12px;
+  font-size: 2rem;
+  font-weight: bold;
+}
+#programCalendar .ui-datepicker-calendar {
+  width: 100%;
+}
+#programCalendar .ui-datepicker-calendar thead th {
+  font-weight: 400;
+  font-size: 0.7rem;
+  color: #999;
+}
+#programCalendar .ui-datepicker-calendar thead th span[title="Sunday"] {
+  color: #f36464;
+}
+#programCalendar .ui-datepicker-calendar tbody td {
+  position: relative;
+  height: 74px;
+}
+#programCalendar .ui-datepicker-calendar .ui-state-default {
+  display: block;
+  width: 48px;
+  height: 43px;
+  text-align: center;
+  font-weight: 600;
+  font-size: 18px;
+  padding-top: 5px;
+}
+#programCalendar .ui-datepicker-calendar .ui-datepicker-today .ui-state-active {
+  border: 1px solid #000;
+  border-radius: 50%;
+}
+#programCalendar .ui-datepicker-calendar td.eventday:after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 24px;
+  margin-left: -2px;
+  width: 4px;
+  height: 4px;
+  background-color: #000;
+  border-radius: 50%;
 }
