--- a/css/style.css
+++ b/css/style.css
@@ -1,220 +1,227 @@
 @charset "UTF-8";
-@import './common.css';
-@import './main.css';
-@import './culture.css';
+@import "./common.css";
+@import "./main.css";
+@import "./culture.css";
+@import "./space.css";
 
 .wrap,
-.header{
-    box-sizing: border-box;
+.header {
+  box-sizing: border-box;
 }
-.wrap{
-    padding: 0 30px;
+.wrap {
+  padding: 0 30px;
 }
 
 /* header */
-#header{
-    height: 96px;
-    padding: 0 30px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fff;
+#header {
+  height: 96px;
+  padding: 0 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
 
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 100
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
 }
-#header.header--fixed{
-    border: 1px solid #000;
+#header.header--fixed {
+  border: 1px solid #000;
 }
 #header .header__nav {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
-.header__nav .header__logo .header__logo-link{
-    display: block;
-    
+.header__nav .header__logo .header__logo-link {
+  display: block;
 }
-.header__nav .header__logo .header__logo-link img{
-    height: 28px;
+.header__nav .header__logo .header__logo-link img {
+  height: 28px;
 }
 
-#gnb .lst-gnb{
-    display: flex;
-    padding: 0 18px;
-    height: 96px;
+#gnb .lst-gnb {
+  display: flex;
+  padding: 0 18px;
+  height: 96px;
 }
-#gnb .lst-gnb .lst-gnb__item{
-    position: relative;
-    padding: 0 28px;
-    font-weight: bold;
-    font-size: 1.2rem;
-    height: 100%;
+#gnb .lst-gnb .lst-gnb__item {
+  position: relative;
+  padding: 0 28px;
+  font-weight: bold;
+  font-size: 1.2rem;
+  height: 100%;
 }
-#gnb .lst-gnb .lst-gnb__item .lst-gnb__item-link{
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    font-family: 'Noto Sans KR';
-    font-weight: 500;
+#gnb .lst-gnb .lst-gnb__item .lst-gnb__item-link {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  font-family: "Noto Sans KR";
+  font-weight: 500;
 }
-#gnb .lst-gnb .lst-gnb__item .icon-arrow{
-    padding-bottom: 6px;
-    height: 20px;
-    transform: rotate(90deg);
+#gnb .lst-gnb .lst-gnb__item .icon-arrow {
+  padding-bottom: 6px;
+  height: 20px;
+  transform: rotate(90deg);
 }
-#gnb .lst-gnb .lst-gnb-sub{
-    display: none;
+#gnb .lst-gnb .lst-gnb-sub {
+  display: none;
 }
 
 #gnb .lst-gnb .lst-gnb__item:hover .lst-gnb-sub,
-#gnb .lst-gnb .lst-gnb__item.on .lst-gnb-sub{
-    display: block;
-    position: absolute;
-    top: 72px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 200px;
-    background-color: #222;
-    color: rgba(255,255,255, 0.7);
-    font-size: 0.9rem;
-    font-family: YouAndI;
-    font-weight: normal;
+#gnb .lst-gnb .lst-gnb__item.on .lst-gnb-sub {
+  display: block;
+  position: absolute;
+  top: 72px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 200px;
+  background-color: #222;
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 0.9rem;
+  font-family: YouAndI;
+  font-weight: normal;
 }
 #gnb .lst-gnb .lst-gnb__item:hover .lst-gnb-sub .lst-gnb-sub__item,
-#gnb .lst-gnb .lst-gnb__item.on .lst-gnb-sub .lst-gnb-sub__item{
-    height: 3rem;
+#gnb .lst-gnb .lst-gnb__item.on .lst-gnb-sub .lst-gnb-sub__item {
+  height: 3rem;
 }
 #gnb .lst-gnb .lst-gnb__item:hover .lst-gnb-sub .lst-gnb-sub__item:hover,
-#gnb .lst-gnb .lst-gnb__item.on .lst-gnb-sub .lst-gnb-sub__item:hover{
-    background-color: #444;
-    color: rgba(255,255,255,1)
+#gnb .lst-gnb .lst-gnb__item.on .lst-gnb-sub .lst-gnb-sub__item:hover {
+  background-color: #444;
+  color: rgba(255, 255, 255, 1);
 }
-#gnb .lst-gnb .lst-gnb__item:hover .lst-gnb-sub .lst-gnb-sub__item .lst-gnb-sub__item-link,
-#gnb .lst-gnb .lst-gnb__item.on .lst-gnb-sub .lst-gnb-sub__item .lst-gnb-sub__item-link{
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
+#gnb
+  .lst-gnb
+  .lst-gnb__item:hover
+  .lst-gnb-sub
+  .lst-gnb-sub__item
+  .lst-gnb-sub__item-link,
+#gnb
+  .lst-gnb
+  .lst-gnb__item.on
+  .lst-gnb-sub
+  .lst-gnb-sub__item
+  .lst-gnb-sub__item-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
-#header .btn__search{
-    justify-self: self-end;
-    display: block;
-    width: 20px;
-    height: 20px;
+#header .btn__search {
+  justify-self: self-end;
+  display: block;
+  width: 20px;
+  height: 20px;
 }
 #header .header__search {
-    display: none;
+  display: none;
 }
 #header .header__search.header__search--active {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 
-    height: 386px;
-    background: #222;
-    color: #fff;
+  height: 386px;
+  background: #222;
+  color: #fff;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
 
 /* container */
 #container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-#container .inner-wrap{
-    padding-top: 200px;
-    width: 1230px;
-    box-sizing: border-box;
+#container .inner-wrap {
+  padding-top: 200px;
+  width: 1230px;
+  box-sizing: border-box;
 }
 #container .section__top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-bottom: 32px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 32px;
 }
 
-#container .section__title{
-    font-size: 2.6rem;
-    line-height: 1.5;
-    font-weight: 500;
+#container .section__title {
+  font-size: 2.6rem;
+  line-height: 1.5;
+  font-weight: 500;
 }
 #container .section__title + p {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 .section__top .section__top-box .lst-tab {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 /* footer */
-#footer{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #111;
-    color: rgba(255,255,255,0.5);
-    padding: 45px 30px;
+#footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #111;
+  color: rgba(255, 255, 255, 0.5);
+  padding: 45px 30px;
 }
 
-#footer .footer__logo{
-    width: 144px;
-    height: auto;
-    opacity: 0.6;
+#footer .footer__logo {
+  width: 144px;
+  height: auto;
+  opacity: 0.6;
 }
-#footer .footer__info{
-    flex-grow: 1;
-    display: flex;
-    align-items: center;
-    margin-left: 36px;
-    font-size: 0.9rem;
+#footer .footer__info {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  margin-left: 36px;
+  font-size: 0.9rem;
 }
-.footer__info > *{
-    padding: 0 10px;
+.footer__info > * {
+  padding: 0 10px;
 }
-.footer__info p{
-    position: relative;
+.footer__info p {
+  position: relative;
 }
-.footer__info p:before{
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 4px;
-    width: 1px;
-    height: 13px;
-    background: rgba(255,255,255,0.5);
+.footer__info p:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 4px;
+  width: 1px;
+  height: 13px;
+  background: rgba(255, 255, 255, 0.5);
 }
 
 /* top button */
-.btn__top{
-    position: fixed;
-    right: 120px;
-    bottom: 240px;
+.btn__top {
+  position: fixed;
+  right: 120px;
+  bottom: 240px;
 }
 
-
-
-@media (max-width: 1290px ){
-    #container {
-        display: block;
-    }
-    #container .inner-wrap{
-        padding: 200px 30px 0;
-        width: 100%;
-    }
+@media (max-width: 1290px) {
+  #container {
+    display: block;
+  }
+  #container .inner-wrap {
+    padding: 200px 30px 0;
+    width: 100%;
+  }
 }
