--- a/css/common.css
+++ b/css/common.css
@@ -48,3 +48,16 @@ a:active{
 address{
     font-style: inherit;
 }
+
+/* common style */
+.blind {
+    position: absolute;
+    top: 0;
+    left: -99999px;
+    text-indent: -99999px;
+    width: 1px;
+    height: 1px;
+    line-height: 0;
+    font-size: 0;
+    overflow: hidden;
+  }
